monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "my-grafana.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: grafana
            port:
              number: 80
  - host: "my-nginx.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-nginx
            port:
              number: 80
  - host: "my-prometheus.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus
            port:
              number: 80
  - host: "my-exporter.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: py-custom-exporter
            port:
              number: 9998
  - host: "alertmanager.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: alertmanager
            port:
              number: 80
  - host: "my-hunter.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-hunter
            port:
              number: 80
