my-nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: my-nginx
      port:
        number: 80
