my2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-proxy-protocol: "true"

spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-nginx
            port:
              number: 80
